# docker-local-ai

./: .env  .env.example  .gitignore  Dockerfile  README.md  code_folder.bat  docker-compose.yaml  docker_folder.bat  install.bat  install.sh  local-ai-install.md  open_vs_code.bat  ports.md  requirements.txt  test.bat  vscode-plugins.bat
.devcontainer/: devcontainer.json  mount-volumes.sh
AnythingLLM/: ReadMe.md  cleanup-all.bat  docker-compose.yaml  install.bat  install.sh
RooCode/: ReadMe.md
VsCodePluginTest/: ReadMe.md  cline-plugin.md  continue-plugin.md  roo-code-plugin.md  twinny-plugin.md
ace-step/: ReadMe.md  cleanup-all.bat  install-dev-cont.sh  install.bat  install.sh  run.sh
autogen-studio/: .env  Dockerfile  ReadMe.md  cleanup-all.bat  docker-compose.yaml  install.bat  install.sh
bolt.diy/: ReadMe.md  cleanup-all.bat  install.bat  install.sh
code/: llms.py
comfy_ui/: Dockerfile  ReadMe.md  cleanup-all.bat  code_folder.bat  docker-compose.yaml  download-models.bat  download-models.sh  install.bat  install.sh
crawl4ai/: ReadMe.md  cleanup-all.bat  install.bat  install.sh  requirements.txt
crewai/: ReadMe.md  cleanup-all.bat  code_folder.bat  docker-compose.yaml  install.bat  (+3 more)
crewai/TestCrewAiPrj/vehicle_crew/: pyproject.toml  report.md
crewai/TestCrewAiPrj/vehicle_crew/src/cai_test/: crew.py  main.py
crewai/TestCrewAiPrj/vehicle_crew/src/cai_test/config/: tasks.yaml
crewai/TestCrewAiPrj/vehicle_crew/src/cai_test/tools/: custom_tool.py  telematic_data.py  telematic_tools.py
crewai/TestCrewAiPrj/vehicle_crew/src/cai_test/utils/: llms.py
(+138 files in other folders)
