[project]
name = "cai_test"
version = "0.1.0"
description = "cai_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "numexpr"
]

[project.scripts]
cai_test = "cai_test.main:run"
run_crew = "cai_test.main:run"
train = "cai_test.main:train"
replay = "cai_test.main:replay"
test = "cai_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
